--- a/index.html
+++ b/index.html
@@ -44,20 +44,6 @@
             font-size: 1.2em;
             color: #d5006d;
         }
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-            color: white;
-            background-color: #d5006d; /* 深粉色 */
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 20px;
-        }
-        button:hover {
-            background-color: #c4005a; /* 更深的粉色 */
-        }
         .flower {
             position: absolute;
             width: 100px;
@@ -105,7 +91,6 @@
                 秒
             </div>
         </div>
-        <button onclick="startCountdown()">开始倒计时</button>
     </div>
     
     <div class="flower"></div>
@@ -139,6 +124,9 @@
                 document.getElementById('seconds').innerText = seconds;
             }, 1000);
         }
+
+        // 自动开始倒计时
+        startCountdown();
     </script>
 </body>
 </html>
