--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我们Jennie结婚啦！！！</title>
+    <title>Happy Jennie's Wedding Day</title>
     <style>
         body {
             margin: 0;
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>结婚倒计时</h1>
+        <h1>我们Jennie结婚啦！！！</h1>
         <div class="countdown" id="countdown">
             <div class="time-unit">
                 <span id="days">0</span>
